tests/parser/tests/cases/should_fail/pat_match_missing_semi/case.stderr
error: Failed to parse
  --> $DIR/case.hash:10:16
 9 |           };
10 |           _ => -1
   |                  ^ here
11 |       };
   = note: Unexpectedly reached the end of input. Consider adding a ';'
